--- a/templates/index.html
+++ b/templates/index.html
@@ -85,28 +85,29 @@
             {# About #}
             <div id="rri_menu_about" style="padding-top: 2em">
                 <div class="row">
-                    <div class="col s2"><span class="right bold">Who?</span></div>
-                    <div class="col s10">Created by 4_pr0n</div>
+                    <div class="col s3"><span class="right bold">Who?</span></div>
+                    <div class="col s9">Created by 4_pr0n</div>
                 </div>
                 <div class="row">
-                    <div class="col s2"><span class="right bold">What?</span></div>
-                    <div class="col s10">Shows reddit posts, comments, and albums that contain an image</div>
+                    <div class="col s3"><span class="right bold">What?</span></div>
+                    <div class="col s9">Shows reddit posts, comments, and albums that contain an image</div>
                 </div>
                 <div class="row">
-                    <div class="col s2"><span class="right bold">When?</span></div>
-                    <div class="col s10">Constantly scrapes images from day-old posts</div>
+                    <div class="col s3"><span class="right bold">When?</span></div>
+                    <div class="col s9">Constantly scrapes images from day-old posts</div>
                 </div>
                 <div class="row">
-                    <div class="col s2"><span class="right bold">Where?</span></div>
-                    <div class="col s10">From the weekly top 1,000 posts in the listed subreddits</div>
+                    <div class="col s3"><span class="right bold">Where?</span></div>
+                    <div class="col s9">From the weekly top 1,000 posts in the listed subreddits</div>
                 </div>
                 <div class="row">
-                    <div class="col s2"><span class="right bold">Why?</span></div>
-                    <div class="col s10">The greater good</div>
+                    <div class="col s3"><span class="right bold">Why?</span></div>
+                    <div class="col s9">The greater good</div>
                 </div>
                 <div class="row">
-                    <div class="col s2"><span class="right bold">How?</span></div>
-                    <div class="col s10">Image comparison & python. see the source code on <a href="https://github.com/simon987/irarchives">Github</a></div>
+                    <div class="col s3"><span class="right bold">How?</span></div>
+                    <div class="col s9">Image comparison & python. see the source code on <a
+                            href="https://github.com/simon987/irarchives">Github</a></div>
                 </div>
             </div>
         </div>
